[package]
name = "api-rust"
version = "0.1.0"
authors = ["iamlockon <xdddxyyyxzzz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
listenfd = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }