[package]
name = "api-rust"
version = "0.1.0"
authors = ["iamlockon <xdddxyyyxzzz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-http = "1.0.1"
failure = "0.1.7"
actix-rt = "1"
listenfd = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
derive_more = "0.15"